# pokebenchmark-platform

./: .gitignore  Dockerfile  Dockerfile.dev  docker-compose.yml  pyproject.toml  requirements.txt
pokebenchmark_platform/catalog/: __init__.py  db.py  models.py
pokebenchmark_platform/orchestrator/: __main__.py  app.py  container_manager.py
pokebenchmark_platform/orchestrator/routes/: catalog.py  games.py  runs.py  skills.py  ws.py
pokebenchmark_platform/recording/: __init__.py  recorder.py
tests/: test_catalog.py  test_container_manager.py  test_recorder.py
